src/components/ui/MobileList/mobileListItem.scss
.Layer__MobileListItem {
  display: grid;
  grid-template-areas:
    'content'
    'expanded'
    'footer';
  grid-template-columns: 1fr;
  overflow: hidden;

  border-radius: var(--border-radius-sm);

  border: 1px solid var(--border-color);
  background-color: var(--color-base-0);

  &[data-selection-mode='multiple'],
  &[data-selection-mode='single'] {
    grid-template-areas:
      'selection content'
      'expanded expanded'
      'footer footer';
    grid-template-columns: auto 1fr;
  }

  & > .Layer__Checkbox {
    grid-area: selection;
    align-self: center;
    padding-inline: var(--spacing-md) var(--spacing-2xs);
  }

  &__Content {
    grid-area: content;
    padding: var(--spacing-sm);
  }

  &__Expanded {
    grid-area: expanded;
    overflow: hidden;
  }

  &__Footer {
    grid-area: footer;
  }

  [data-variant='compact'] & {
    border-radius: 0;
    border: none;
  }

  [data-variant='compact'] &__Content {
    padding-inline: 0;
  }

  [data-variant='compact'] &__Footer {
    border-radius: 0;
  }
}

